--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Title</title>
+    <title>Poke App</title>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="style.css">
+    <link href="style.css" rel="stylesheet"/>
     <script defer src="js/main.js" type="module"></script>
-
   </head>
   <body>
     <nav class="navbar navbar-expand-lg special-attack">
       <div class="container-md">
-        <h1 class="navbar-brand" style="font-size: 2.5rem; color: yellow">POKE APP</h1>
+        <h1 class="navbar-brand" style="font-size: 2.5rem; color: yellow">
+          POKE APP
+        </h1>
       </div>
     </nav>
 
@@ -27,7 +28,7 @@
               id="search-input"
               type="search"
             />
-           <!-- <button class="btn btn-outline-success" type="submit">
+            <!-- <button class="btn btn-outline-success" type="submit">
               Search
             </button>-->
           </form>
