--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Poke App</title>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <link href="style.css" rel="stylesheet"/>
+    <link href="style.css" rel="stylesheet" />
     <script defer src="js/main.js" type="module"></script>
   </head>
   <body>
@@ -34,8 +34,15 @@
           </form>
         </div>
       </div>
+
+     <div class="row" id="spinner">
+       <div class="spinner-border col-lg-4 mx-auto text-special-attack" role="status">
+         <span class="visually-hidden">Loading...</span>
+       </div>
+     </div>
+
       <h1 id="empty" class="text-center text-danger d-none">Data kosong</h1>
-      <table class="table table-striped my3 table-responsive">
+      <table class="table table-striped my3 table-responsive d-none" id="table-header">
         <thead>
           <tr>
             <th scope="col">ID</th>
