Add pagination loaded data

--- a/index.html
+++ b/index.html
@@ -54,12 +54,17 @@
             <th scope="col">Type</th>
             <th scope="col">Weight</th>
             <th scope="col">Height</th>
-            <th scope="col">Detail</th>
+            <th scope="col">Statistics</th>
           </tr>
         </thead>
 
         <tbody id="tables"></tbody>
       </table>
+
+      <div class="d-flex justify-content-center mb-3">
+        <button type="button" id="load-trigger" class="btn btn-primary text-white text-center">Load More</button>
+
+      </div>
     </div>
 
     <!-- Modal -->
