resolve bug button when load data

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </table>
 
       <div class="d-flex justify-content-center mb-3">
-        <button type="button" id="load-trigger" class="btn btn-primary text-white text-center">Load More</button>
+        <button type="button" id="load-trigger" class="btn btn-primary text-white text-center d-none">Load More</button>
 
       </div>
     </div>
