--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Poke App</title>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <link href="style.css" rel="stylesheet" />
     <script defer src="js/main.js" type="module"></script>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
@@ -61,7 +60,10 @@
         <tbody id="tables"></tbody>
       </table>
 
-      <div class="d-flex justify-content-center mb-3">
+      <div class="d-flex flex-column align-items-center justify-content-center mb-3 gap-3">
+        <div class="spinner-border text-primary d-none" id="spinner-load" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
         <button type="button" id="load-trigger" class="btn btn-primary text-white text-center d-none">Load More</button>
 
       </div>
