--- a/backup.html
+++ b/backup.html
@@ -5,15 +5,8 @@
     <title>Poke App</title>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <script defer src="js/cardStyle.js" type="module"></script>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link
-      crossorigin="anonymous"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-      referrerpolicy="no-referrer"
-      rel="stylesheet"
-    />
+    <script defer src="js/main.js" type="module"></script>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg special-attack">
@@ -26,7 +19,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 mx-auto my-5">
+        <div class="col-lg-6 mx-auto my-4">
           <form class="d-flex" role="search">
             <input
               aria-label="Search"
@@ -49,28 +42,30 @@
       </div>
 
       <h1 id="empty" class="text-center text-danger d-none">Data kosong</h1>
-
-      <!-- Content-->
-
-      <div class="row gy-lg-5" id="card-list"></div>
-
-      <div
-        class="d-flex flex-column align-items-center justify-content-center my-4 gap-3"
+      <table
+        class="table table-striped my3 table-responsive d-none"
+        id="table-header"
       >
-        <div
-          class="spinner-border text-primary d-none"
-          id="spinner-load"
-          role="status"
-        >
+        <thead>
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Name</th>
+            <th scope="col">Type</th>
+            <th scope="col">Weight</th>
+            <th scope="col">Height</th>
+            <th scope="col">Statistics</th>
+          </tr>
+        </thead>
+
+        <tbody id="tables"></tbody>
+      </table>
+
+      <div class="d-flex flex-column align-items-center justify-content-center gap-3">
+        <div class="spinner-border text-primary d-none" id="spinner-load" role="status">
           <span class="visually-hidden">Loading...</span>
         </div>
-        <button
-          type="button"
-          id="load-trigger"
-          class="btn btn-primary text-white text-center d-none"
-        >
-          Load More
-        </button>
+        <button type="button" id="load-trigger" class="my-5 btn btn-primary text-white text-center d-none">Load More</button>
+
       </div>
     </div>
 
