--- a/index.html
+++ b/index.html
@@ -100,6 +100,29 @@
       </div>
     </div>
 
+
+    <!-- Pop up modal -->
+    <div class="modal" style="transition: all 1s" id="myModal" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p>Klik nama pokemon untuk melihat statistik</p>
+          </div>
+
+        </div>
+      </div>
+    </div>
     <script src="js/bootstrap/bootstrap.bundle.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+
+    <script type="text/javascript">
+      $(window).on('load', function() {
+        $('#myModal').modal('show');
+      });
+    </script>
   </body>
 </html>
