--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
     <div class="modal" style="transition: all 1s" id="myModal" tabindex="-1">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <div class="modal-header special-attack">
+            <button type="button" class="btn-close bg-white" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
             <p>Klik nama pokemon untuk melihat statistik</p>
