--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
       </div>
 
-      <h1 id="empty" class="text-center text-danger d-none">Data kosong</h1>
+      <h1 id="empty" class="text-center text-danger d-none">Pokemon tidak ditemukan</h1>
 
       <!-- Content-->
 
